force-app/main/default/objects/Related_Source__c/Related_Source__c.object-meta.xml
<CustomObject>
    <label>Related Source</label>
    <nameField>
        <displayFormat>RS-{000}</displayFormat>
        <label>Related Source</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Sources</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>