force-app/main/default/objects/Related_Source__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <formula>!ISBLANK(Last_Commented_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>