force-app/main/default/objects/Related_Source__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <formula>SLead__r.Booking_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Date</label>
    <type>DateTime</type>
</CustomField>