force-app/main/default/objects/Related_Source__c/fields/Bookings__c.field-meta.xml
<CustomField>
    <fullName>Bookings__c</fullName>
    <formula>OR(
    ISPICKVAL(Lead_status1__c, &apos;Booked&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings</label>
    <type>Checkbox</type>
</CustomField>