force-app/main/default/objects/Related_Source__c/fields/Chat_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Chat_Conversation__c</fullName>
    <label>Chat Conversation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>