force-app/main/default/objects/Related_Source__c/fields/Cold_Rating__c.field-meta.xml
<CustomField>
    <fullName>Cold_Rating__c</fullName>
    <formula>ISPICKVAL( Enquiry_Category__c ,&apos;Cold&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cold Rating</label>
    <type>Checkbox</type>
</CustomField>