force-app/main/default/objects/Related_Source__c/fields/Consent_Lead__c.field-meta.xml
<CustomField>
    <fullName>Consent_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Lead</label>
    <type>Checkbox</type>
</CustomField>