force-app/main/default/objects/Related_Source__c/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <formula>ISPICKVAL( Lead_status1__c ,&apos;Booked&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted</label>
    <type>Checkbox</type>
</CustomField>