force-app/main/default/objects/Related_Source__c/fields/Corporate_Re_Engage_Date__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Re_Engage_Date__c</fullName>
    <formula>SLead__r.Corporate_Re_Engage_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Re Engage Date</label>
    <type>DateTime</type>
</CustomField>