force-app/main/default/objects/Related_Source__c/fields/CP_Lead_Formula__c.field-meta.xml
<CustomField>
    <fullName>CP_Lead_Formula__c</fullName>
    <description>Formula Field For Checking Is the Parent Lead Secondary Source is Channel partner</description>
    <formula>ISPICKVAL( SLead__r.Lead_source__c  , &quot;Channel Partner&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Lead Formula</label>
    <type>Checkbox</type>
</CustomField>