force-app/main/default/objects/Related_Source__c/fields/CP_Manager_Assignment__c.field-meta.xml
<CustomField>
    <fullName>CP_Manager_Assignment__c</fullName>
    <label>CP Manager Assignment</label>
    <length>200</length>
    <type>Text</type>
</CustomField>