force-app/main/default/objects/Related_Source__c/fields/CP_Re_Engage_Date__c.field-meta.xml
<CustomField>
    <fullName>CP_Re_Engage_Date__c</fullName>
    <formula>SLead__r.CP_Re_Engage_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Re Engage Date</label>
    <type>DateTime</type>
</CustomField>