force-app/main/default/objects/Related_Source__c/fields/Cp_Sourcing_RM__c.field-meta.xml
<CustomField>
    <fullName>Cp_Sourcing_RM__c</fullName>
    <formula>Channel_Partner1__r.Sourcing_RM__r.FirstName +&apos; &apos;+  Channel_Partner1__r.Sourcing_RM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cp Sourcing RM</label>
    <type>Text</type>
</CustomField>