force-app/main/default/objects/Related_Source__c/fields/Current_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Profile__c</fullName>
    <formula>Owner:User.Id ==  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Profile</label>
    <type>Checkbox</type>
</CustomField>