force-app/main/default/objects/Related_Source__c/fields/Direct_Lead_Formula__c.field-meta.xml
<CustomField>
    <fullName>Direct_Lead_Formula__c</fullName>
    <description>Checking The Parent Lead type is Direct</description>
    <formula>ISPICKVAL(SLead__r.Lead_Type__c,&quot;Direct Lead&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Lead Formula</label>
    <type>Checkbox</type>
</CustomField>