force-app/main/default/objects/Related_Source__c/fields/Direct_Re_Engage_Date__c.field-meta.xml
<CustomField>
    <fullName>Direct_Re_Engage_Date__c</fullName>
    <formula>SLead__r.Direct_Re_Engage_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Re Engage Date</label>
    <type>DateTime</type>
</CustomField>