force-app/main/default/objects/Related_Source__c/fields/EOI__c.field-meta.xml
<CustomField>
    <fullName>EOI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EOI</label>
    <type>Checkbox</type>
</CustomField>