force-app/main/default/objects/Related_Source__c/fields/Expiry_Anchor_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Anchor_Date__c</fullName>
    <label>Expiry Anchor Date</label>
    <type>DateTime</type>
</CustomField>