force-app/main/default/objects/Related_Source__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <formula>IF(
NOT(ISBLANK(Expiry_Anchor_Date__c)),
DATEVALUE(Expiry_Anchor_Date__c),
IF(
NOT(ISBLANK(Last_Re_Opened_Date__c)),
DATEVALUE(Last_Re_Opened_Date__c),
DATEVALUE(CreatedDate)
)
) + Expiry_Days__c + Extension_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>