force-app/main/default/objects/Related_Source__c/fields/Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Expiry Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>