force-app/main/default/objects/Related_Source__c/fields/Expiry_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Remarks__c</fullName>
    <label>Expiry Remarks</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>