force-app/main/default/objects/Related_Source__c/fields/Extension_Approver__c.field-meta.xml
<CustomField>
    <fullName>Extension_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Extension Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Related_SourcesubJP</relationshipName>
    <type>Lookup</type>
</CustomField>