force-app/main/default/objects/Related_Source__c/fields/Extension_Days__c.field-meta.xml
<CustomField>
    <fullName>Extension_Days__c</fullName>
    <label>Extension Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>