force-app/main/default/objects/Related_Source__c/fields/Extension_Decided_At__c.field-meta.xml
<CustomField>
    <fullName>Extension_Decided_At__c</fullName>
    <label>Extension Decided At</label>
    <type>DateTime</type>
</CustomField>