force-app/main/default/objects/Related_Source__c/fields/Extension_Decision_Notes__c.field-meta.xml
<CustomField>
    <fullName>Extension_Decision_Notes__c</fullName>
    <label>Extension Decision Notes</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>