force-app/main/default/objects/Related_Source__c/fields/Extension_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Extension_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Extension Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Related_SourcesuwNp</relationshipName>
    <type>Lookup</type>
</CustomField>