force-app/main/default/objects/Related_Source__c/fields/Extension_Requested_Days__c.field-meta.xml
<CustomField>
    <fullName>Extension_Requested_Days__c</fullName>
    <label>Extension Requested Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>