force-app/main/default/objects/Related_Source__c/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <formula>OR(
    ISPICKVAL(Lead_status1__c, &apos;Pre Sales Follow Up&apos;),
    ISPICKVAL(Lead_status1__c, &apos;Sales Follow up&apos;)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow Up</label>
    <type>Checkbox</type>
</CustomField>