force-app/main/default/objects/Related_Source__c/fields/FU_0_5__c.field-meta.xml
<CustomField>
    <fullName>FU_0_5__c</fullName>
    <formula>IF(ISBLANK(Last_Follow_Up_Date__c), FALSE,
  TODAY() - DATEVALUE(Last_Follow_Up_Date__c) &gt;= 0 &amp;&amp;
  TODAY() - DATEVALUE(Last_Follow_Up_Date__c) &lt;= 5
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FU|0-5</label>
    <type>Checkbox</type>
</CustomField>