force-app/main/default/objects/Related_Source__c/fields/FU_10_15__c.field-meta.xml
<CustomField>
    <fullName>FU_10_15__c</fullName>
    <formula>IF(ISBLANK(Last_Follow_Up_Date__c), FALSE,
  TODAY() - DATEVALUE(Last_Follow_Up_Date__c) &gt; 10 &amp;&amp;
  TODAY() - DATEVALUE(Last_Follow_Up_Date__c) &lt;= 15
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FU|10-15</label>
    <type>Checkbox</type>
</CustomField>