force-app/main/default/objects/Related_Source__c/fields/FU_15_30__c.field-meta.xml
<CustomField>
    <fullName>FU_15_30__c</fullName>
    <formula>IF(ISBLANK(Last_Follow_Up_Date__c), FALSE,
  TODAY() - DATEVALUE(Last_Follow_Up_Date__c) &gt; 15 &amp;&amp;
  TODAY() - DATEVALUE(Last_Follow_Up_Date__c) &lt;= 30
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FU|15-30</label>
    <type>Checkbox</type>
</CustomField>