force-app/main/default/objects/Related_Source__c/fields/Hot_Rating__c.field-meta.xml
<CustomField>
    <fullName>Hot_Rating__c</fullName>
    <formula>ISPICKVAL( Enquiry_Category__c ,&apos;Hot&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hot Rating</label>
    <type>Checkbox</type>
</CustomField>