force-app/main/default/objects/Related_Source__c/fields/is_Allocated__c.field-meta.xml
<CustomField>
    <fullName>is_Allocated__c</fullName>
    <formula>RecordType.Name == &apos;Sales&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Allocated</label>
    <type>Checkbox</type>
</CustomField>