force-app/main/default/objects/Related_Source__c/fields/Is_Attended__c.field-meta.xml
<CustomField>
    <fullName>Is_Attended__c</fullName>
    <formula>if(!IsBlank(Direct_Re_Engage_Date__c), Last_Commented_Date__c &gt; Direct_Re_Engage_Date__c,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Attended</label>
    <type>Checkbox</type>
</CustomField>