force-app/main/default/objects/Related_Source__c/fields/Is_Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed_Lost__c</fullName>
    <formula>ISPICKVAL(Lead_status1__c,&apos;Closed Lost&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Closed Lost</label>
    <type>Checkbox</type>
</CustomField>