force-app/main/default/objects/Related_Source__c/fields/Is_CP_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_CP_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Creating for Sharing Rules</description>
    <label>Is CP Lead</label>
    <type>Checkbox</type>
</CustomField>