force-app/main/default/objects/Related_Source__c/fields/Is_Direct_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Direct_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Direct Lead</label>
    <type>Checkbox</type>
</CustomField>