force-app/main/default/objects/Related_Source__c/fields/Is_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Is_Rejected__c</fullName>
    <formula>ISPICKVAL(Lead_status1__c,&apos;Rejected&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Rejected</label>
    <type>Checkbox</type>
</CustomField>