force-app/main/default/objects/Related_Source__c/fields/Is_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Is_Unqualified__c</fullName>
    <formula>ISPICKVAL(Lead_status1__c,&apos;Unqualified&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Unqualified</label>
    <type>Checkbox</type>
</CustomField>