force-app/main/default/objects/Related_Source__c/fields/Last_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Date__c</fullName>
    <formula>Last_Presales_Call_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Call Date</label>
    <type>DateTime</type>
</CustomField>