force-app/main/default/objects/Related_Source__c/fields/Last_Commented_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Commented_Date__c</fullName>
    <label>Last Commented Date</label>
    <type>DateTime</type>
</CustomField>