force-app/main/default/objects/Related_Source__c/fields/Last_Note__c.field-meta.xml
<CustomField>
    <fullName>Last_Note__c</fullName>
    <label>Last Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>