force-app/main/default/objects/Related_Source__c/fields/Last_Unqualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Unqualified_Date__c</fullName>
    <label>Last Unqualified Date</label>
    <type>DateTime</type>
</CustomField>