force-app/main/default/objects/Related_Source__c/fields/Latest_FollowUp_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_FollowUp_Date__c</fullName>
    <label>Latest FollowUp Date</label>
    <type>DateTime</type>
</CustomField>