force-app/main/default/objects/Related_Source__c/fields/Lead_Expired__c.field-meta.xml
<CustomField>
    <fullName>Lead_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Expired</label>
    <type>Checkbox</type>
</CustomField>