force-app/main/default/objects/Related_Source__c/fields/Lead_quality__c.field-meta.xml
<CustomField>
    <fullName>Lead_quality__c</fullName>
    <label>Lead Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential prospect</fullName>
            </value>
            <value>
                <fullName>bad lead</fullName>
            </value>
            <value>
                <fullName>no enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>