force-app/main/default/objects/Related_Source__c/fields/Mc_Sync__c.field-meta.xml
<CustomField>
    <fullName>Mc_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mc Sync</label>
    <type>Checkbox</type>
</CustomField>