force-app/main/default/objects/Related_Source__c/fields/Mobile_With_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_With_Country_Code__c</fullName>
    <label>Mobile With Country Code</label>
    <type>Phone</type>
</CustomField>