force-app/main/default/objects/Related_Source__c/fields/Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Negotiation__c</fullName>
    <formula>ISPICKVAL(Lead_status1__c, &apos;Negotiation&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negotiation</label>
    <type>Checkbox</type>
</CustomField>