force-app/main/default/objects/Related_Source__c/fields/No_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>No_Follow_Up__c</fullName>
    <formula>ISBLANK(Last_Follow_Up_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Follow Up</label>
    <type>Checkbox</type>
</CustomField>