force-app/main/default/objects/Related_Source__c/fields/Owner_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Owner_Transfer__c</fullName>
    <label>Owner Transfer</label>
    <length>220</length>
    <type>Text</type>
</CustomField>