force-app/main/default/objects/Related_Source__c/fields/Primary_Phone1__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone1__c</fullName>
    <formula>IF(
OR(
$Profile.Name = &quot;System Administrator&quot;,$Profile.Name = &quot;HOD&quot;
),
Phone__c, /* Show actual phone number */
LEFT(Phone__c, 4) &amp; &apos;XXXX&apos; &amp; RIGHT(Phone__c, 2) /* Masked phone */
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Phone For</label>
    <type>Text</type>
</CustomField>