force-app/main/default/objects/Related_Source__c/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <label>NAPrimary Phone</label>
    <type>Phone</type>
</CustomField>