force-app/main/default/objects/Related_Source__c/fields/Qualified__c.field-meta.xml
<CustomField>
    <fullName>Qualified__c</fullName>
    <formula>AND(
    !ISPICKVAL(Lead_status1__c, &apos;Closed Lost&apos;),
    !ISPICKVAL(Lead_status1__c, &apos;Unqualified&apos;),
    !ISPICKVAL(Lead_status1__c, &apos;Rejected&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualified</label>
    <type>Checkbox</type>
</CustomField>