force-app/main/default/objects/Related_Source__c/fields/Re_assigned_date__c.field-meta.xml
<CustomField>
    <fullName>Re_assigned_date__c</fullName>
    <label>Re-assigned date</label>
    <type>DateTime</type>
</CustomField>