force-app/main/default/objects/Related_Source__c/fields/Referral_Re_Engage_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Re_Engage_Date__c</fullName>
    <formula>SLead__r.Referral_Re_Engage_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Re Engage Date</label>
    <type>DateTime</type>
</CustomField>