force-app/main/default/objects/Related_Source__c/fields/Site_Visit_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Status__c</fullName>
    <label>Site Visit Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>