force-app/main/default/objects/Related_Source__c/fields/Source_of_Consent__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Consent__c</fullName>
    <label>Source of Consent</label>
    <length>220</length>
    <type>Text</type>
</CustomField>